Wed May 16 05:22:28 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,letor_internal.cc: Need unistd.h for getcwd().

Wed May 16 04:45:33 GMT 2012  Olly Betts <olly@survex.com>

	* docs/letor.rst: Drop discussion of pre-requisites as INSTALL now
	  covers this.
