@@ -1,8 +1,11 @@
 bin_PROGRAMS +=\
 	examples/questletor
 
-examples_questletor_SOURCES = examples/questletor.cc
-examples_questletor_LDADD = $(ldflags) libgetopt.la $(libxapian_la)
+examples_questletor_SOURCES =\
+	examples/questletor.cc\
+	common/getopt.cc\
+	common/gnu_getopt.h
+examples_questletor_LDADD = libxapianletor.la
 
 if !MAINTAINER_NO_DOCS
 dist_man_MANS +=\
