@@ -1,3 +1,8 @@
+Wed May 16 05:37:56 GMT 2012  Olly Betts <olly@survex.com>
+
+	* configure.ac,examples/Makefile.mk,makemanpage.in: Get xapian-letor
+	  module to build.
+
 Wed May 16 05:22:28 GMT 2012  Olly Betts <olly@survex.com>
 
 	* Makefile.am,letor_internal.cc: Need unistd.h for getcwd().
